
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


typedef int uint8_t ;
struct TYPE_4__ {int flags; int * priv_data; } ;
typedef int ParseContext ;
typedef TYPE_1__ AVCodecParserContext ;
typedef int AVCodecContext ;


 int PARSER_FLAG_COMPLETE_FRAMES ;
 scalar_t__ ff_combine_frame (int *,int,int const**,int*) ;
 int ff_mpeg4_find_frame_end (int *,int const*,int) ;
 int mpeg4_decode_header (TYPE_1__*,int *,int const*,int) ;

__attribute__((used)) static int mpeg4video_parse(AVCodecParserContext *s,
                            AVCodecContext *avctx,
                            const uint8_t **poutbuf, int *poutbuf_size,
                            const uint8_t *buf, int buf_size)
{
    ParseContext *pc = s->priv_data;
    int next;

    if (s->flags & PARSER_FLAG_COMPLETE_FRAMES) {
        next = buf_size;
    } else {
        next = ff_mpeg4_find_frame_end(pc, buf, buf_size);

        if (ff_combine_frame(pc, next, &buf, &buf_size) < 0) {
            *poutbuf = ((void*)0);
            *poutbuf_size = 0;
            return buf_size;
        }
    }
    mpeg4_decode_header(s, avctx, buf, buf_size);

    *poutbuf = buf;
    *poutbuf_size = buf_size;
    return next;
}
