; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_mpeg4video_parser.c_mpeg4video_parse.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_mpeg4video_parser.c_mpeg4video_parse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32* }

@PARSER_FLAG_COMPLETE_FRAMES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i32*, i32**, i32*, i32*, i32)* @mpeg4video_parse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mpeg4video_parse(%struct.TYPE_4__* %0, i32* %1, i32** %2, i32* %3, i32* %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_4__*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32**, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32** %2, i32*** %10, align 8
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store i32 %5, i32* %13, align 4
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 1
  %18 = load i32*, i32** %17, align 8
  store i32* %18, i32** %14, align 8
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = load i32, i32* @PARSER_FLAG_COMPLETE_FRAMES, align 4
  %23 = and i32 %21, %22
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %6
  %26 = load i32, i32* %13, align 4
  store i32 %26, i32* %15, align 4
  br label %41

27:                                               ; preds = %6
  %28 = load i32*, i32** %14, align 8
  %29 = load i32*, i32** %12, align 8
  %30 = load i32, i32* %13, align 4
  %31 = call i32 @ff_mpeg4_find_frame_end(i32* %28, i32* %29, i32 %30)
  store i32 %31, i32* %15, align 4
  %32 = load i32*, i32** %14, align 8
  %33 = load i32, i32* %15, align 4
  %34 = call i64 @ff_combine_frame(i32* %32, i32 %33, i32** %12, i32* %13)
  %35 = icmp slt i64 %34, 0
  br i1 %35, label %36, label %40

36:                                               ; preds = %27
  %37 = load i32**, i32*** %10, align 8
  store i32* null, i32** %37, align 8
  %38 = load i32*, i32** %11, align 8
  store i32 0, i32* %38, align 4
  %39 = load i32, i32* %13, align 4
  store i32 %39, i32* %7, align 4
  br label %52

40:                                               ; preds = %27
  br label %41

41:                                               ; preds = %40, %25
  %42 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %43 = load i32*, i32** %9, align 8
  %44 = load i32*, i32** %12, align 8
  %45 = load i32, i32* %13, align 4
  %46 = call i32 @mpeg4_decode_header(%struct.TYPE_4__* %42, i32* %43, i32* %44, i32 %45)
  %47 = load i32*, i32** %12, align 8
  %48 = load i32**, i32*** %10, align 8
  store i32* %47, i32** %48, align 8
  %49 = load i32, i32* %13, align 4
  %50 = load i32*, i32** %11, align 8
  store i32 %49, i32* %50, align 4
  %51 = load i32, i32* %15, align 4
  store i32 %51, i32* %7, align 4
  br label %52

52:                                               ; preds = %41, %36
  %53 = load i32, i32* %7, align 4
  ret i32 %53
}

declare dso_local i32 @ff_mpeg4_find_frame_end(i32*, i32*, i32) #1

declare dso_local i64 @ff_combine_frame(i32*, i32, i32**, i32*) #1

declare dso_local i32 @mpeg4_decode_header(%struct.TYPE_4__*, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
